<resources>
    <string name="app_name">TrafficTracker</string>
    <string name="SET_PRIORITY_HIGH_ACCURACY">using GPS sensors</string>
    <string name="SET_BALANCED_POWER_ACCURACY">Using towers + wifi</string>
    <string name="PERMISSION_NOT_GRANTED">This app requires permission to be granted in order to work properly</string>
    <string name="RESOURCE_NOT_AVAILABLE">not available</string>
    <string name="UPDATE_ON">Location is being tracked</string>
    <string name="UPDATE_OFF">Location is NOT being tracked</string>
    <string name="OS_NOT_SUPPORTED">OS not supported</string>
    <string name="SHOW_LIST_BTT">show waypoint list</string>
    <string name="LATITUDE_LABEL">Lat:</string>
    <string name="LONGITUDE_LABEL">lon:</string>
    <string name="ALTITUDE_LABEL">Altitude:</string>
    <string name="ACCURACY_LABEL">Accuracy:</string>
    <string name="SPEED_LABEL">Speed:</string>
    <string name="SENSOR_LABEL">Sensor:</string>
    <string name="UPDATES_LABEL">Updates:</string>
    <string name="LOCATION_UPDATES_SWITCH">Location Updates</string>
    <string name="SET_INTERVAL_SWITCH">GPS/SavePower</string>
    <string name="ADDRESS_LABEL">Address:</string>
    <string name="NEW_WAYPOINT_BTT">New WayPoint (disabilitato)</string>
    <string name="WAYPOINTS_LABEL">WayPoints:</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="DbURL">https://sawproject.altervista.org/php/cam_request.php</string>
    <string name="title_activity_show_traffic_info">ShowTrafficInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MAP_BUTTON">show map</string>
    <string name="STATUS_ON_MESSAGE">status: Attivo</string>
    <string name="STATUS_OFF_MESSAGE">status: Disattivo</string>
    <string name="NO_TRAFFIC_DATA_AVAILABLE">Dati non disponibili</string>
    <string name="TRAFFIC_STATUS_LABEL">caricamento</string>
    <string name="CAMERA_STATUS_LABEL">status:</string>
    <string name="NO_INTERNET">nessuna connessione a internet</string>
    <!--
    <string name="CAMERA_REQUEST_IPADDRESS">https://sawproject.altervista.org/php/cam_request.php</string>
    <string name="CAMERA_STATUS_REQUEST_IPADDRESS">https://sawproject.altervista.org/php/cam_status_request.php?id=</string>
    -->
    <string name="CAMERA_REQUEST_IPADDRESS">http://2.225.7.81/cam_request.php</string>
    <string name="CAMERA_STATUS_REQUEST_IPADDRESS">http://2.225.7.81/cam_status_request.php?id=</string>
</resources>